--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/resume">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+			<li><a href="/">Home</a></li>
+			<li><a href="/resume">Resume</a></li>
     		</ul>
 		</nav>
 		<div class="container">
@@ -18,7 +16,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:lczhang1998@gmail.com">email</a></li>
+        		<li><a href="mailto:lichenz@andrew.cmu.edu">email</a></li>
         		<li><a href="https://github.com/lczh">github.com/lczh</a></li>
 			</ul>
 		</footer>
