--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<nav>
     		<ul>
 			<li><a href="/">Home</a></li>
-			<li><a href="/resume">Resume</a></li>
+			<li><a href="https://github.com/lczh/files/blob/master/Zhang-Lichen.pdf">Resume</a></li>
     		</ul>
 		</nav>
 		<div class="container">
@@ -18,6 +18,8 @@
     		<ul>
         		<li><a href="mailto:lichenz@andrew.cmu.edu">email</a></li>
         		<li><a href="https://github.com/lczh">github.com/lczh</a></li>
+			<li><a href="https://github.com/lczh/CombinatoricsNotes">21-301 Combinatorics Notes</a></li>
+			<li><a href="https://github.com/lczh/files/blob/master/research-survey.pptx">15-300 Presentation Slides</a></li>
 			</ul>
 		</footer>
 	</body>
