--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         		<li><a href="mailto:lichenz@andrew.cmu.edu">email</a></li>
         		<li><a href="https://github.com/lczh">github.com/lczh</a></li>
 			<li><a href="https://github.com/lczh/CombinatoricsNotes">21-301 Combinatorics Notes</a></li>
-			<li><a href="https://github.com/lczh/files/blob/master/research-survey.pptx">15-300 Presentation Slides</a></li>
+			<li><a href="/"(To appear) 21-373 Algebraic Structures Notes</a></li>
 			</ul>
 		</footer>
 	</body>
