--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<body>
 		<nav>
     		<ul>
+			Please go to my new homepage!
+			<li><a href="http://www.andrew.cmu.edu/user/lichenz/">My new homepage</a></li>
 			<li><a href="/">Home</a></li>
 			<li><a href="https://github.com/lczh/files/blob/master/Zhang-Lichen.pdf">Resume</a></li>
     		</ul>
