--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Lichen Zhang's homepage</title>
 	</head>
 	<body>
+		<h1> Lichen Zhang's old homepage </h1>
 		<nav>
     		<ul>
 			Please go to my new homepage!
