--- a/index.html
+++ b/index.html
@@ -1,32 +1,52 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Lichen Zhang's homepage</title>
+		<title> Lichen Zhang's homepage </title>
 	</head>
 	<body>
-		<h1> Lichen Zhang's old homepage </h1>
+		<h1> Lichen Zhang's homepage </h1>
+		<h2> Short Bio </h2>
+		<p> I'm a 5th year MSCS student in <a href = "https://www.cmu.edu/"> Carnegie Mellon University</a>, where I'm fortunate to be advised by Professor <a href = "http://www.cs.cmu.edu/~glmiller/"> Gary Miller</a>. I received my B.S. in Computer Science in Carnegie Mellon as well. I'm broadly interested in theoretical computer science, especially the design of efficient algorithms. I'm particularly interested in optimization, randomized linear algebra, adaptive robust data structures and spectral graph theory. My research also spans machine learning, and the use of theory tools to solve large-scale learning problems. </p>
 		<nav>
-    		<ul>
-			Please go to my new homepage!
-			<li><a href="http://www.andrew.cmu.edu/user/lichenz/">My new homepage</a></li>
-			<li><a href="/">Home</a></li>
-			<li><a href="https://github.com/lczh/files/blob/master/Zhang-Lichen.pdf">Resume</a></li>
-    		</ul>
+		<h2> Personal information </h2>
+		<ul>
+			<li> <a href = "/user/lichenz/"> Home </a> </li>
+			<li> <a href = "CV.pdf"> CV </a> </li>
+			<li> <a href = "mailto: lichenz@andrew.cmu.edu"> email </a> </li>
+		</ul>
 		</nav>
-		<div class="container">
-    		<div class="blurb">
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:lichenz@andrew.cmu.edu">email</a></li>
-        		<li><a href="https://github.com/lczh">github.com/lczh</a></li>
-			<li><a href="https://github.com/lczh/CombinatoricsNotes">21-301 Combinatorics Notes</a></li>
-			<li><a href="/">(To appear) 21-373 Algebraic Structures Notes</a></li>
-			</ul>
-		</footer>
+		<!-- <div class = "container">
+		<div class = "blurb"> -->
+		<h2> Publications (Author names in alphabetical order) </h2>
+		<ul>
+			<li>
+				Speeding Up Sparsification with Inner Product Search Data Structures (<a href = "https://arxiv.org/pdf/2204.03209.pdf">arxiv link</a>).
+				<br> Zhao Song, Zhaozhuo Xu and <i>Lichen Zhang</i>.
+				</pre>
+			</li>
+			<li>
+				Training Multi-Layer Over-Parametrized Neural Networks in Subquadratic Time (<a href = "https://arxiv.org/pdf/2112.07628.pdf">arxiv link</a>).
+				<br> Zhao Song, <i>Lichen Zhang</i> and Ruizhe Zhang.
+				</pre>
+			</li>
+			<li>
+                Fast Sketching of Polynomial Kernels of Polynomial Degree (<a href = "https://arxiv.org/pdf/2108.09420.pdf">arxiv link</a>).
+                <br> Zhao Song, David P. Woodruff, Zheng Yu and <i>Lichen Zhang</i>.
+                <br> Accepted by<i> ICML, 2021</i>.
+                </pre>
+            </li>
+		</ul>
+		<h2> 15-155 Course Materials </h2>
+		<ul>
+			<li>
+				<a href = "project.pdf">  Project document </a> </li>
+			</li>
+		</ul>
+		<h2> Master Thesis </h2>
+		<ul>
+			<li>
+				<a href = "lichen_thesis.pdf">  Master Thesis </a> </li>
+			</li>
+		</ul>
 	</body>
 </html>
-
-
-
