--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
 				<br> Zhao Song, <i>Lichen Zhang</i> and Ruizhe Zhang.
 				</pre>
 			</li>
+            <li>
+                Faster Algorithm for One-Sided Kadison-Singer via Furthest-Neighbor Search (<a href = "sxz21.pdf">pdf</a>).
+                <br> Zhao Song, Zhaozhuo Xu and <i>Lichen Zhang</i>.
+                </pre>
+            </li>
 			<li>
                 Fast Sketching of Polynomial Kernels of Polynomial Degree (<a href = "https://arxiv.org/pdf/2108.09420.pdf">arxiv link</a>).
                 <br> Zhao Song, David P. Woodruff, Zheng Yu and <i>Lichen Zhang</i>.
