--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 	<body>
 		<h1> Lichen Zhang's homepage </h1>
 		<h2> Short Bio </h2>
-		<p> I'm a 5th year MSCS student in <a href = "https://www.cmu.edu/"> Carnegie Mellon University</a>, where I'm fortunate to be advised by Professor <a href = "http://www.cs.cmu.edu/~glmiller/"> Gary Miller</a>. I received my B.S. in Computer Science in Carnegie Mellon as well. I'm broadly interested in theoretical computer science, especially the design of efficient algorithms. I'm particularly interested in optimization, randomized linear algebra, adaptive robust data structures and spectral graph theory. My research also spans machine learning, and the use of theory tools to solve large-scale learning problems. </p>
+        <p> I'm an incoming PhD student in <a href = "https://math.mit.edu/">  MIT Mathematics</a>. I obtained my Bachelor and Master in Computer Science in <a href = "https://www.cmu.edu/"> Carnegie Mellon University</a>, advised by Professor <a href = "http://www.cs.cmu.edu/~glmiller/"> Gary Miller</a>.  
+
+        I'm broadly interested in theoretical computer science, especially the design of efficient algorithms. I'm particularly interested in optimization, randomized linear algebra, adaptive robust data structures and spectral graph theory. My research also spans machine learning, and the use of theory tools to solve large-scale learning problems. </p>
 		<nav>
 		<h2> Personal information </h2>
 		<ul>
-			<li> <a href = "/user/lichenz/"> Home </a> </li>
 			<li> <a href = "CV.pdf"> CV </a> </li>
-			<li> <a href = "mailto: lichenz@andrew.cmu.edu"> email </a> </li>
+			<li> <a href = "mailto: lichenz@mit.edu"> email: lichenz AT mit DOT edu </a> </li>
 		</ul>
 		</nav>
 		<!-- <div class = "container">
