--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<h2> Personal information </h2>
 		<ul>
 			<li> <a href = "CV.pdf"> CV </a> </li>
-			<li> <a href = "mailto: lichenz@mit.edu"> email: lichenz AT mit DOT edu </a> </li>
+			<li> Email: lichenz AT mit DOT edu </a> </li>
 		</ul>
 		</nav>
 		<!-- <div class = "container">
