--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 		<div class = "blurb"> -->
 		<h2> Publications (Author names in alphabetical order) </h2>
 		<ul>
+            <li>
+                Accelerating Frank-Wolfe Algorithm using Low-Dimensional and Adaptive Data Structures (<a href = "https://arxiv.org/pdf/2207.09002.pdf">arxiv link</a>).
+                <br> Zhao Song, Zhaozhuo Xu, Yuanyuan Yang and <i>Lichen Zhang</i>.
+                </pre>
+            </li>
 			<li>
 				Speeding Up Sparsification with Inner Product Search Data Structures (<a href = "https://arxiv.org/pdf/2204.03209.pdf">arxiv link</a>).
 				<br> Zhao Song, Zhaozhuo Xu and <i>Lichen Zhang</i>.
