--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<h1> Lichen Zhang's homepage </h1>
 		<h2> Short Bio </h2>
-        <p> I'm an incoming PhD student in <a href = "https://math.mit.edu/">  MIT Mathematics</a>. I obtained my Bachelor and Master in Computer Science in <a href = "https://www.cmu.edu/"> Carnegie Mellon University</a>, advised by Professor <a href = "http://www.cs.cmu.edu/~glmiller/"> Gary Miller</a>.  
+        <p> I'm first year PhD student at <a href = "https://math.mit.edu/">  MIT Mathematics</a>. I obtained my Bachelor and Master in Computer Science in <a href = "https://www.cmu.edu/"> Carnegie Mellon University</a>, advised by Professor <a href = "http://www.cs.cmu.edu/~glmiller/"> Gary Miller</a>.  
 
         I'm broadly interested in theoretical computer science, especially the design of efficient algorithms. I'm particularly interested in optimization, randomized linear algebra, adaptive robust data structures and spectral graph theory. My research also spans machine learning, and the use of theory tools to solve large-scale learning problems. </p>
 		<nav>
@@ -50,7 +50,7 @@
 		<h2> Master Thesis </h2>
 		<ul>
 			<li>
-				<a href = "lichen_thesis.pdf">  Master Thesis </a> </li>
+				<a href = "http://reports-archive.adm.cs.cmu.edu/anon/anon/2022/CMU-CS-22-107.pdf">  Master Thesis </a> </li>
 			</li>
 		</ul>
 	</body>
