--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 		<h2> Publications (Author names in alphabetical order) </h2>
 		<ul>
             <li>
+                Dynamic Tensor Product Regression (to appear).
+                <br> Aravind Reddy, Zhao Song and <i> Lichen Zhang </i>.
+                </pre>
+            </li>
+            <li>
                 Accelerating Frank-Wolfe Algorithm using Low-Dimensional and Adaptive Data Structures (<a href = "https://arxiv.org/pdf/2207.09002.pdf">arxiv link</a>).
                 <br> Zhao Song, Zhaozhuo Xu, Yuanyuan Yang and <i>Lichen Zhang</i>.
                 </pre>
