--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li>
                 Dynamic Tensor Product Regression (to appear).
                 <br> Aravind Reddy, Zhao Song and <i> Lichen Zhang </i>.
+                <br> Accepted by<i> NeurIPS, 2022</i>.
                 </pre>
             </li>
             <li>
