--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<h2> Publications (Author names in alphabetical order) </h2>
 		<ul>
             <li>
-                Dynamic Tensor Product Regression (to appear).
+                Dynamic Tensor Product Regression (<a href = "https://arxiv.org/pdf/2210.03961.pdf">arxiv link</a>).
                 <br> Aravind Reddy, Zhao Song and <i> Lichen Zhang </i>.
                 <br> Accepted by<i> NeurIPS, 2022</i>.
                 </pre>
