--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
 		<h2> Publications (Author names in alphabetical order) </h2>
 		<ul>
             <li>
+                Sketching for First Order Method: Efficient Algorithm for Low-Bandwidth
+                Channel and Vulnerability (<a href = "https://arxiv.org/pdf/2210.08371.pdf">arxiv link</a>).
+                <br> Zhao Song, Yitan Wang, Zheng Yu and <i>Lichen Zhang</i>.
+                </pre>
+            </li>
+            <li>
                 Dynamic Tensor Product Regression (<a href = "https://arxiv.org/pdf/2210.03961.pdf">arxiv link</a>).
                 <br> Aravind Reddy, Zhao Song and <i> Lichen Zhang </i>.
                 <br> Accepted by<i> NeurIPS, 2022</i>.
