--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 		<h2> Publications (Author names in alphabetical order) </h2>
 		<ul>
             <li>
+                Sketching Meets Differential Privacy: Fast Algorithm for Dynamic Kronecker Projection Maintenance (<a href = "https://arxiv.org/pdf/2210.11542.pdf">arxiv link</a>).
+            <br> Zhao Song, Xin Yang, Yuanyuan Yang and <i>Lichen Zhang</i>.
+            </pre>
+            </li>
+            <li>
                 Sketching for First Order Method: Efficient Algorithm for Low-Bandwidth
                 Channel and Vulnerability (<a href = "https://arxiv.org/pdf/2210.08371.pdf">arxiv link</a>).
                 <br> Zhao Song, Yitan Wang, Zheng Yu and <i>Lichen Zhang</i>.
