--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
 		<div class = "blurb"> -->
 		<h2> Publications (Author names in alphabetical order) </h2>
 		<ul>
-            <li>
+        <li>
+            An Online and Unified Algorithm for Projection Matrix Vector Multiplication with Application to Empirical Risk Minimization.
+        <br> Lianke Qin, Zhao Song, <i>Lichen Zhang</i> and Danyang Zhuo.
+        </pre>
+        </li>
+        <!--    <li>
                 Sketching Meets Differential Privacy: Fast Algorithm for Dynamic Kronecker Projection Maintenance (<a href = "https://arxiv.org/pdf/2210.11542.pdf">arxiv link</a>).
             <br> Zhao Song, Xin Yang, Yuanyuan Yang and <i>Lichen Zhang</i>.
             </pre>
@@ -30,18 +35,18 @@
                 Channel and Vulnerability (<a href = "https://arxiv.org/pdf/2210.08371.pdf">arxiv link</a>).
                 <br> Zhao Song, Yitan Wang, Zheng Yu and <i>Lichen Zhang</i>.
                 </pre>
-            </li>
+            </li> -->
             <li>
                 Dynamic Tensor Product Regression (<a href = "https://arxiv.org/pdf/2210.03961.pdf">arxiv link</a>).
                 <br> Aravind Reddy, Zhao Song and <i> Lichen Zhang </i>.
                 <br> Accepted by<i> NeurIPS, 2022</i>.
                 </pre>
             </li>
-            <li>
+        <!--    <li>
                 Accelerating Frank-Wolfe Algorithm using Low-Dimensional and Adaptive Data Structures (<a href = "https://arxiv.org/pdf/2207.09002.pdf">arxiv link</a>).
                 <br> Zhao Song, Zhaozhuo Xu, Yuanyuan Yang and <i>Lichen Zhang</i>.
                 </pre>
-            </li>
+            </li> -->
 			<li>
 				Speeding Up Sparsification with Inner Product Search Data Structures (<a href = "https://arxiv.org/pdf/2204.03209.pdf">arxiv link</a>).
 				<br> Zhao Song, Zhaozhuo Xu and <i>Lichen Zhang</i>.
