--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li>
             An Online and Unified Algorithm for Projection Matrix Vector Multiplication with Application to Empirical Risk Minimization.
         <br> Lianke Qin, Zhao Song, <i>Lichen Zhang</i> and Danyang Zhuo.
+        <br> Accepted by<i> AISTATS, 2023</i>.
         </pre>
         </li>
         <!--    <li>
