--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li>
             An Online and Unified Algorithm for Projection Matrix Vector Multiplication with Application to Empirical Risk Minimization.
         <br> Lianke Qin, Zhao Song, <i>Lichen Zhang</i> and Danyang Zhuo.
-        <br> Accepted by<i> AISTATS, 2023</i>.
+        <br> AISTATS, 2023.
         </pre>
         </li>
         <!--    <li>
@@ -40,7 +40,7 @@
             <li>
                 Dynamic Tensor Product Regression (<a href = "https://arxiv.org/pdf/2210.03961.pdf">arxiv link</a>).
                 <br> Aravind Reddy, Zhao Song and <i> Lichen Zhang </i>.
-                <br> Accepted by<i> NeurIPS, 2022</i>.
+                <br> NeurIPS, 2022.
                 </pre>
             </li>
         <!--    <li>
@@ -66,7 +66,7 @@
 			<li>
                 Fast Sketching of Polynomial Kernels of Polynomial Degree (<a href = "https://arxiv.org/pdf/2108.09420.pdf">arxiv link</a>).
                 <br> Zhao Song, David P. Woodruff, Zheng Yu and <i>Lichen Zhang</i>.
-                <br> Accepted by<i> ICML, 2021</i>.
+                <br> ICML 2021.
                 </pre>
             </li>
 		</ul>
