--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         I'm broadly interested in theoretical computer science, especially the design of efficient algorithms. I'm particularly interested in optimization, randomized linear algebra, adaptive robust data structures and spectral graph theory. My research also spans machine learning, and the use of theory tools to solve large-scale learning problems. </p>
 		<nav>
-		<h2> Personal information </h2>
+		<h2> Personal Information </h2>
 		<ul>
 			<li> <a href = "CV.pdf"> CV </a> </li>
 			<li> Email: lichenz AT mit DOT edu </a> </li>
@@ -66,7 +66,7 @@
 			<li>
                 Fast Sketching of Polynomial Kernels of Polynomial Degree (<a href = "https://arxiv.org/pdf/2108.09420.pdf">arxiv link</a>).
                 <br> Zhao Song, David P. Woodruff, Zheng Yu and <i>Lichen Zhang</i>.
-                <br> ICML 2021.
+                <br> ICML, 2021.
                 </pre>
             </li>
 		</ul>
