--- a/index.html
+++ b/index.html
@@ -20,8 +20,13 @@
 		<div class = "blurb"> -->
 		<h2> Publications (Author names in alphabetical order) </h2>
 		<ul>
+        <!-- <li>
+            Convex Minimization with Integer Minima in $~O(n^4)$ Time (<a href = "https://arxiv.org/pdf/2304.03426.pdf"> arxiv link </a>).
+        <br> Haotian Jiang, Yin Tat Lee, Zhao Song and <i>Lichen Zhang</i>.
+        </pre>
+        </li> -->
         <li>
-            An Online and Unified Algorithm for Projection Matrix Vector Multiplication with Application to Empirical Risk Minimization.
+            An Online and Unified Algorithm for Projection Matrix Vector Multiplication with Application to Empirical Risk Minimization (<a href = "https://proceedings.mlr.press/v206/qin23a/qin23a.pdf"> link </a>).
         <br> Lianke Qin, Zhao Song, <i>Lichen Zhang</i> and Danyang Zhuo.
         <br> AISTATS, 2023.
         </pre>
