--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
         </pre>
         </li> -->
         <li>
+            Space-Efficient Interior Point Method, with applications to Linear Programming and Maximum Weight Bipartite Matching (<a href = "https://arxiv.org/pdf/2009.06106.pdf">arxiv link</a>).
+        <br> S. Cliff Liu, Zhao Song, Hengjie Zhang, <i>Lichen Zhang</i> and Tianyi Zhou,
+        <br> ICALP, 2023.
+        </pre>
+        </li>
+        <li>
             An Online and Unified Algorithm for Projection Matrix Vector Multiplication with Application to Empirical Risk Minimization (<a href = "https://proceedings.mlr.press/v206/qin23a/qin23a.pdf">link</a>).
         <br> Lianke Qin, Zhao Song, <i>Lichen Zhang</i> and Danyang Zhuo.
         <br> AISTATS, 2023.
