--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
                 </pre>
             </li> -->
 			<li>
+                Fast Sketching of Polynomial Kernels of Polynomial Degree (<a href = "https://arxiv.org/pdf/2108.09420.pdf">arxiv link</a>).
+                <br> Zhao Song, David P. Woodruff, Zheng Yu and <i>Lichen Zhang</i>.
+                <br> ICML, 2021.
+                </pre>
+            </li>
+		</ul>
+        <h2> Manuscripts </h2>
+        <ul>
+			<li>
 				Speeding Up Sparsification with Inner Product Search Data Structures (<a href = "https://arxiv.org/pdf/2204.03209.pdf">arxiv link</a>).
 				<br> Zhao Song, Zhaozhuo Xu and <i>Lichen Zhang</i>.
 				</pre>
@@ -74,13 +83,7 @@
                 <br> Zhao Song, Zhaozhuo Xu and <i>Lichen Zhang</i>.
                 </pre>
             </li>
-			<li>
-                Fast Sketching of Polynomial Kernels of Polynomial Degree (<a href = "https://arxiv.org/pdf/2108.09420.pdf">arxiv link</a>).
-                <br> Zhao Song, David P. Woodruff, Zheng Yu and <i>Lichen Zhang</i>.
-                <br> ICML, 2021.
-                </pre>
-            </li>
-		</ul>
+        </ul>
 		<h2> Master Thesis </h2>
 		<ul>
 			<li>
