--- a/index.html
+++ b/index.html
@@ -25,7 +25,20 @@
         <br> Haotian Jiang, Yin Tat Lee, Zhao Song and <i>Lichen Zhang</i>.
         </pre>
         </li> -->
-        <li>
+            <li>
+                Sketching Meets Differential Privacy: Fast Algorithm for Dynamic Kronecker Projection Maintenance (<a href = "https://arxiv.org/pdf/2210.11542.pdf">arxiv link</a>).
+            <br> Zhao Song, Xin Yang, Yuanyuan Yang and <i>Lichen Zhang</i>.
+            <br> ICML, 2023.
+            </pre>
+            </li>
+            <li>
+                Sketching for First Order Method: Efficient Algorithm for Low-Bandwidth
+                Channel and Vulnerability (<a href = "https://arxiv.org/pdf/2210.08371.pdf">arxiv link</a>).
+                <br> Zhao Song, Yitan Wang, Zheng Yu and <i>Lichen Zhang</i>.
+                <br> ICML, 2023.
+                </pre>
+            </li> 
+            <li>
             Space-Efficient Interior Point Method, with applications to Linear Programming and Maximum Weight Bipartite Matching (<a href = "https://arxiv.org/pdf/2009.06106.pdf">arxiv link</a>).
         <br> S. Cliff Liu, Zhao Song, Hengjie Zhang, <i>Lichen Zhang</i> and Tianyi Zhou,
         <br> ICALP, 2023.
@@ -37,17 +50,6 @@
         <br> AISTATS, 2023.
         </pre>
         </li>
-        <!--    <li>
-                Sketching Meets Differential Privacy: Fast Algorithm for Dynamic Kronecker Projection Maintenance (<a href = "https://arxiv.org/pdf/2210.11542.pdf">arxiv link</a>).
-            <br> Zhao Song, Xin Yang, Yuanyuan Yang and <i>Lichen Zhang</i>.
-            </pre>
-            </li>
-            <li>
-                Sketching for First Order Method: Efficient Algorithm for Low-Bandwidth
-                Channel and Vulnerability (<a href = "https://arxiv.org/pdf/2210.08371.pdf">arxiv link</a>).
-                <br> Zhao Song, Yitan Wang, Zheng Yu and <i>Lichen Zhang</i>.
-                </pre>
-            </li> -->
             <li>
                 Dynamic Tensor Product Regression (<a href = "https://arxiv.org/pdf/2210.03961.pdf">arxiv link</a>).
                 <br> Aravind Reddy, Zhao Song and <i> Lichen Zhang </i>.
