--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
 		</ul>
         <h2> Manuscripts </h2>
         <ul>
+            <li>
+                Convex Minimization with Integer Minima in ~O(n^4) Time (<a href = "https://arxiv.org/pdf/2304.03426.pdf">arxiv link</a>).
+            <br> Haotian Jiang, Yin Tat Lee, Zhao Song and <i>Lichen Zhang</i>.
+            </pre>
+            </li>
 			<li>
 				Speeding Up Sparsification with Inner Product Search Data Structures (<a href = "https://arxiv.org/pdf/2204.03209.pdf">arxiv link</a>).
 				<br> Zhao Song, Zhaozhuo Xu and <i>Lichen Zhang</i>.
