--- a/index.html
+++ b/index.html
@@ -39,8 +39,14 @@
                 </pre>
             </li> 
             <li>
+                A Nearly-Optimal Bound for Fast Regression with \ell_\infty Guarantee.
+                <br> Zhao Song, Mingquan Ye, Junze Yin and <i>Lichen Zhang</i>.
+                <br> ICML, 2023.
+                </pre>
+            </li>
+            <li>
             Space-Efficient Interior Point Method, with applications to Linear Programming and Maximum Weight Bipartite Matching (<a href = "https://arxiv.org/pdf/2009.06106.pdf">arxiv link</a>).
-        <br> S. Cliff Liu, Zhao Song, Hengjie Zhang, <i>Lichen Zhang</i> and Tianyi Zhou,
+        <br> S. Cliff Liu, Zhao Song, Hengjie Zhang, <i>Lichen Zhang</i> and Tianyi Zhou.
         <br> ICALP, 2023.
         </pre>
         </li>
@@ -76,7 +82,7 @@
             </pre>
             </li>
 			<li>
-				Speeding Up Sparsification with Inner Product Search Data Structures (<a href = "https://arxiv.org/pdf/2204.03209.pdf">arxiv link</a>).
+				Speeding Up Sparsification using Inner Product Search Data Structures (<a href = "https://arxiv.org/pdf/2204.03209.pdf">arxiv link</a>).
 				<br> Zhao Song, Zhaozhuo Xu and <i>Lichen Zhang</i>.
 				</pre>
 			</li>
