--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
             <br> Haotian Jiang, Yin Tat Lee, Zhao Song and <i>Lichen Zhang</i>.
             </pre>
             </li>
+            <li>
+                Low Rank Matrix Completion via Robust Alternating Minimization in Nearly Linear Time (<a href = "https://arxiv.org/pdf/2302.11068.pdf">arxiv link</a>).
+            <br> Yuzhou Gu, Zhao Song, Junze Yin and <i>Lichen Zhang</i>.
+            </pre>
+            </li>
 			<li>
 				Speeding Up Sparsification using Inner Product Search Data Structures (<a href = "https://arxiv.org/pdf/2204.03209.pdf">arxiv link</a>).
 				<br> Zhao Song, Zhaozhuo Xu and <i>Lichen Zhang</i>.
