--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
 		<div class = "blurb"> -->
 		<h2> Publications (Author names in alphabetical order) </h2>
 		<ul>
-        <!-- <li>
-            Convex Minimization with Integer Minima in $~O(n^4)$ Time (<a href = "https://arxiv.org/pdf/2304.03426.pdf">arxiv link</a>).
-        <br> Haotian Jiang, Yin Tat Lee, Zhao Song and <i>Lichen Zhang</i>.
-        </pre>
-        </li> -->
+            <li>
+                Convex Minimization with Integer Minima in ~O(n^4) Time (<a href = "https://arxiv.org/pdf/2304.03426.pdf">arxiv link</a>).
+            <br> Haotian Jiang, Yin Tat Lee, Zhao Song and <i>Lichen Zhang</i>.
+            <br> SODA, 2024.
+            </pre>
+            </li>
             <li>
                 Sketching Meets Differential Privacy: Fast Algorithm for Dynamic Kronecker Projection Maintenance (<a href = "https://arxiv.org/pdf/2210.11542.pdf">arxiv link</a>).
             <br> Zhao Song, Xin Yang, Yuanyuan Yang and <i>Lichen Zhang</i>.
