--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
 		<div class = "blurb"> -->
 		<h2> Publications (Author names in alphabetical order) </h2>
 		<ul>
+			<li>
+				Training Multi-Layer Over-Parametrized Neural Networks in Subquadratic Time (<a href = "https://arxiv.org/pdf/2112.07628.pdf">arxiv link</a>).
+				<br> Zhao Song, <i>Lichen Zhang</i> and Ruizhe Zhang.
+                <br> ITCS, 2024
+				</pre>
+			</li>
             <li>
                 Convex Minimization with Integer Minima in ~O(n^4) Time (<a href = "https://arxiv.org/pdf/2304.03426.pdf">arxiv link</a>).
             <br> Haotian Jiang, Yin Tat Lee, Zhao Song and <i>Lichen Zhang</i>.
@@ -85,11 +91,6 @@
 			<li>
 				Speeding Up Sparsification using Inner Product Search Data Structures (<a href = "https://arxiv.org/pdf/2204.03209.pdf">arxiv link</a>).
 				<br> Zhao Song, Zhaozhuo Xu and <i>Lichen Zhang</i>.
-				</pre>
-			</li>
-			<li>
-				Training Multi-Layer Over-Parametrized Neural Networks in Subquadratic Time (<a href = "https://arxiv.org/pdf/2112.07628.pdf">arxiv link</a>).
-				<br> Zhao Song, <i>Lichen Zhang</i> and Ruizhe Zhang.
 				</pre>
 			</li>
             <li>
