--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<li>
 				Training Multi-Layer Over-Parametrized Neural Networks in Subquadratic Time (<a href = "https://arxiv.org/pdf/2112.07628.pdf">arxiv link</a>).
 				<br> Zhao Song, <i>Lichen Zhang</i> and Ruizhe Zhang.
-                <br> ITCS, 2024
+                <br> ITCS, 2024.
 				</pre>
 			</li>
             <li>
@@ -83,6 +83,12 @@
 		</ul>
         <h2> Manuscripts </h2>
         <ul>
+            <li>
+                Faster Algorithms for Structured Linear and Kernel Support Vector Machines
+ (<a href = "https://arxiv.org/pdf/2307.07735.pdf">arxiv link</a>).
+            <br> Yuzhou Gu, Zhao Song and <i>Lichen Zhang</i>.
+            </pre>
+            </li>
             <li>
                 Low Rank Matrix Completion via Robust Alternating Minimization in Nearly Linear Time (<a href = "https://arxiv.org/pdf/2302.11068.pdf">arxiv link</a>).
             <br> Yuzhou Gu, Zhao Song, Junze Yin and <i>Lichen Zhang</i>.
