--- a/index.html
+++ b/index.html
@@ -21,26 +21,26 @@
 		<h2> Publications (Author names in alphabetical order) </h2>
 		<ul>
 			<li>
-				Training Multi-Layer Over-Parametrized Neural Networks in Subquadratic Time (<a href = "https://arxiv.org/pdf/2112.07628.pdf">arxiv link</a>).
+				Training Multi-Layer Over-Parametrized Neural Networks in Subquadratic Time (<a href = "https://arxiv.org/abs/2112.07628">arxiv link</a>).
 				<br> Zhao Song, <i>Lichen Zhang</i> and Ruizhe Zhang.
                 <br> ITCS, 2024.
 				</pre>
 			</li>
             <li>
-                Convex Minimization with Integer Minima in ~O(n^4) Time (<a href = "https://arxiv.org/pdf/2304.03426.pdf">arxiv link</a>).
+                Convex Minimization with Integer Minima in ~O(n^4) Time (<a href = "https://arxiv.org/abs/2304.03426">arxiv link</a>).
             <br> Haotian Jiang, Yin Tat Lee, Zhao Song and <i>Lichen Zhang</i>.
             <br> SODA, 2024.
             </pre>
             </li>
             <li>
-                Sketching Meets Differential Privacy: Fast Algorithm for Dynamic Kronecker Projection Maintenance (<a href = "https://arxiv.org/pdf/2210.11542.pdf">arxiv link</a>).
+                Sketching Meets Differential Privacy: Fast Algorithm for Dynamic Kronecker Projection Maintenance (<a href = "https://arxiv.org/abs/2210.11542">arxiv link</a>).
             <br> Zhao Song, Xin Yang, Yuanyuan Yang and <i>Lichen Zhang</i>.
             <br> ICML, 2023.
             </pre>
             </li>
             <li>
                 Sketching for First Order Method: Efficient Algorithm for Low-Bandwidth
-                Channel and Vulnerability (<a href = "https://arxiv.org/pdf/2210.08371.pdf">arxiv link</a>).
+                Channel and Vulnerability (<a href = "https://arxiv.org/abs/2210.08371">arxiv link</a>).
                 <br> Zhao Song, Yitan Wang, Zheng Yu and <i>Lichen Zhang</i>.
                 <br> ICML, 2023.
                 </pre>
@@ -52,19 +52,19 @@
                 </pre>
             </li>
             <li>
-            Space-Efficient Interior Point Method, with applications to Linear Programming and Maximum Weight Bipartite Matching (<a href = "https://arxiv.org/pdf/2009.06106.pdf">arxiv link</a>).
+            Space-Efficient Interior Point Method, with applications to Linear Programming and Maximum Weight Bipartite Matching (<a href = "https://arxiv.org/abs/2009.06106">arxiv link</a>).
         <br> S. Cliff Liu, Zhao Song, Hengjie Zhang, <i>Lichen Zhang</i> and Tianyi Zhou.
         <br> ICALP, 2023.
         </pre>
         </li>
         <li>
-            An Online and Unified Algorithm for Projection Matrix Vector Multiplication with Application to Empirical Risk Minimization (<a href = "https://proceedings.mlr.press/v206/qin23a/qin23a.pdf">link</a>).
+            An Online and Unified Algorithm for Projection Matrix Vector Multiplication with Application to Empirical Risk Minimization (<a href = "https://proceedings.mlr.press/v206/qin23a.html">link</a>).
         <br> Lianke Qin, Zhao Song, <i>Lichen Zhang</i> and Danyang Zhuo.
         <br> AISTATS, 2023.
         </pre>
         </li>
             <li>
-                Dynamic Tensor Product Regression (<a href = "https://arxiv.org/pdf/2210.03961.pdf">arxiv link</a>).
+                Dynamic Tensor Product Regression (<a href = "https://arxiv.org/abs/2210.03961">arxiv link</a>).
                 <br> Aravind Reddy, Zhao Song and <i> Lichen Zhang </i>.
                 <br> NeurIPS, 2022.
                 </pre>
@@ -75,7 +75,7 @@
                 </pre>
             </li> -->
 			<li>
-                Fast Sketching of Polynomial Kernels of Polynomial Degree (<a href = "https://arxiv.org/pdf/2108.09420.pdf">arxiv link</a>).
+                Fast Sketching of Polynomial Kernels of Polynomial Degree (<a href = "https://arxiv.org/abs/2108.09420">arxiv link</a>).
                 <br> Zhao Song, David P. Woodruff, Zheng Yu and <i>Lichen Zhang</i>.
                 <br> ICML, 2021.
                 </pre>
@@ -85,17 +85,17 @@
         <ul>
             <li>
                 Faster Algorithms for Structured Linear and Kernel Support Vector Machines
- (<a href = "https://arxiv.org/pdf/2307.07735.pdf">arxiv link</a>).
+ (<a href = "https://arxiv.org/abs/2307.07735">arxiv link</a>).
             <br> Yuzhou Gu, Zhao Song and <i>Lichen Zhang</i>.
             </pre>
             </li>
             <li>
-                Low Rank Matrix Completion via Robust Alternating Minimization in Nearly Linear Time (<a href = "https://arxiv.org/pdf/2302.11068.pdf">arxiv link</a>).
+                Low Rank Matrix Completion via Robust Alternating Minimization in Nearly Linear Time (<a href = "https://arxiv.org/abs/2302.11068">arxiv link</a>).
             <br> Yuzhou Gu, Zhao Song, Junze Yin and <i>Lichen Zhang</i>.
             </pre>
             </li>
 			<li>
-				Speeding Up Sparsification using Inner Product Search Data Structures (<a href = "https://arxiv.org/pdf/2204.03209.pdf">arxiv link</a>).
+				Speeding Up Sparsification using Inner Product Search Data Structures (<a href = "https://arxiv.org/abs/2204.03209">arxiv link</a>).
 				<br> Zhao Song, Zhaozhuo Xu and <i>Lichen Zhang</i>.
 				</pre>
 			</li>
