--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 		<h2> Personal Information </h2>
 		<ul>
 			<li> <a href = "CV.pdf"> CV </a> </li>
+            <li> <a href = "https://scholar.google.com/citations?view_op=list_works&hl=en&hl=en&user=oJgdHKEAAAAJ"> Google Scholar </a> </li>
+            <li> <a href = "https://dblp.org/pid/00/6357-3.html"> DBLP </a> </li>
 			<li> Email: lichenz AT mit DOT edu </a> </li>
 		</ul>
 		</nav>
