--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<body>
 		<h1> Lichen Zhang's homepage </h1>
 		<h2> Short Bio </h2>
-        <p> I'm a second year PhD student at <a href = "https://math.mit.edu/">  MIT Mathematics</a> and I'm very fortunate to be advised by Professor <a href = "https://math.mit.edu/~kelner/"> Jon Kelner</a>. I obtained my Bachelor and Master in Computer Science in <a href = "https://www.cmu.edu/"> Carnegie Mellon University</a>, advised by Professor <a href = "http://www.cs.cmu.edu/~glmiller/"> Gary Miller</a>.  
+        <p> I'm a second-year PhD student at <a href = "https://math.mit.edu/">  MIT Mathematics</a> and I'm very fortunate to be advised by Professor <a href = "https://math.mit.edu/~kelner/"> Jon Kelner</a>. I obtained my Bachelor and Master in Computer Science at <a href = "https://www.cmu.edu/"> Carnegie Mellon University</a>, advised by Professor <a href = "http://www.cs.cmu.edu/~glmiller/"> Gary Miller</a>.  
 
-        I'm broadly interested in theoretical computer science and machine learning, especially the design of efficient algorithms. I'm particularly interested in optimization, randomized linear algebra and spectral graph theory. I'm also interested in speeding up the training process for large-scale machine learning systems.</p>
+        My research interests lie at the intersection of theoretical computer science and machine learning, with a specific focus on developing efficient algorithms. My areas of expertise include optimization, sketching, and differential privacy. Additionally, I am dedicated to enhancing the efficiency of training processes in large-scale machine learning systems.</p>
 		<nav>
 		<h2> Personal Information </h2>
 		<ul>
