--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<h2> Short Bio </h2>
         <p> I'm a second-year PhD student at <a href = "https://math.mit.edu/">  MIT Mathematics</a> and I'm very fortunate to be advised by Professor <a href = "https://math.mit.edu/~kelner/"> Jon Kelner</a>. I obtained my Bachelor and Master in Computer Science at <a href = "https://www.cmu.edu/"> Carnegie Mellon University</a>, advised by Professor <a href = "http://www.cs.cmu.edu/~glmiller/"> Gary Miller</a>.  
 
-        My research interests lie at the intersection of theoretical computer science and machine learning, with a specific focus on developing efficient algorithms. My areas of expertise include optimization, sketching, and differential privacy. Additionally, I am dedicated to enhancing the efficiency of training processes in large-scale machine learning systems.</p>
+        My research interests lie at the intersection of theoretical computer science and machine learning, with a specific focus on developing efficient algorithms. I'm particularly excited about problems in optimization, sketching, and differential privacy. Additionally, I am dedicated to enhancing the efficiency of training processes in large-scale machine learning systems.</p>
 		<nav>
 		<h2> Personal Information </h2>
 		<ul>
