--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<h2> Publications (Author names in alphabetical order) </h2>
 		<ul>
 			<li>
-				Training Multi-Layer Over-Parametrized Neural Networks in Subquadratic Time (<a href = "https://arxiv.org/abs/2112.07628">arxiv link</a>).
+				Training Multi-Layer Over-Parametrized Neural Network in Subquadratic Time (<a href = "https://arxiv.org/abs/2112.07628">arxiv link</a>).
 				<br> Zhao Song, <i>Lichen Zhang</i> and Ruizhe Zhang.
                 <br> ITCS, 2024.
 				</pre>
