--- a/index.html
+++ b/index.html
@@ -2,13 +2,37 @@
 <html>
 	<head>
 		<title> Lichen Zhang's homepage </title>
+        <style>
+        .container {
+            display: flex;
+            justify-content: space-between;
+        }
+        .bio, .image {
+            width: 50%;
+        }
+        .image img {
+            width: 100%;
+            height: auto;
+        }
+        </style>
 	</head>
 	<body>
 		<h1> Lichen Zhang's homepage </h1>
-		<h2> Short Bio </h2>
+        <div class="container">
+        <div class="bio">
+            <h2> Short Bio </h2>
+            <p> I'm a second-year PhD student at <a href = "https://math.mit.edu/">  MIT Mathematics</a> and I'm very fortunate to be advised by Professor <a href = "https://math.mit.edu/~kelner/"> Jon Kelner</a>. I obtained my Bachelor and Master in Computer Science at <a href = "https://www.cmu.edu/"> Carnegie Mellon University</a>, advised by Professor <a href = "http://www.cs.cmu.edu/~glmiller/"> Gary Miller</a>.  
+
+        My research interests lie at the intersection of theoretical computer science and machine learning, with a specific focus on developing efficient algorithms. I'm particularly excited about problems in optimization, sketching, and differential privacy. Additionally, I am dedicated to enhancing the efficiency of training processes in large-scale machine learning systems.</p>       
+        </div>
+        <div class="image">
+            <img src="lichen.jpg">
+        </div>
+    </div>
+	<!--	<h2> Short Bio </h2>
         <p> I'm a second-year PhD student at <a href = "https://math.mit.edu/">  MIT Mathematics</a> and I'm very fortunate to be advised by Professor <a href = "https://math.mit.edu/~kelner/"> Jon Kelner</a>. I obtained my Bachelor and Master in Computer Science at <a href = "https://www.cmu.edu/"> Carnegie Mellon University</a>, advised by Professor <a href = "http://www.cs.cmu.edu/~glmiller/"> Gary Miller</a>.  
 
-        My research interests lie at the intersection of theoretical computer science and machine learning, with a specific focus on developing efficient algorithms. I'm particularly excited about problems in optimization, sketching, and differential privacy. Additionally, I am dedicated to enhancing the efficiency of training processes in large-scale machine learning systems.</p>
+        My research interests lie at the intersection of theoretical computer science and machine learning, with a specific focus on developing efficient algorithms. I'm particularly excited about problems in optimization, sketching, and differential privacy. Additionally, I am dedicated to enhancing the efficiency of training processes in large-scale machine learning systems.</p> -->
 		<nav>
 		<h2> Personal Information </h2>
 		<ul>
@@ -22,6 +46,24 @@
 		<div class = "blurb"> -->
 		<h2> Publications (Author names in alphabetical order) </h2>
 		<ul>
+        <!--    <li>
+                Accelerating Frank-Wolfe Algorithm using Low-Dimensional and Adaptive Data Structures (<a href = "https://arxiv.org/abs/2207.09002">arxiv link</a>).
+                <br> Zhao Song, Zhaozhuo Xu, Yuanyuan Yang and <i>Lichen Zhang</i>.
+                <br> AISTATS, 2024.
+                </pre>
+            </li> -->
+        <!--    <li>
+            Efficient Alternating Minimization with Applications to Weighted Low Rank Approximation (<a href = "https://arxiv.org/abs/2306.04169">arxiv lin</a>).
+            <br> Zhao Song, Mingquan Ye, Junze Yin and <i> Lichen Zhang</i>.
+            <br> AISTATS, 2024.
+            </pre>
+        </li> -->
+        <!--    <li>
+                Low Rank Matrix Completion via Robust Alternating Minimization in Nearly Linear Time (<a href = "https://arxiv.org/abs/2302.11068">arxiv link</a>).
+            <br> Yuzhou Gu, Zhao Song, Junze Yin and <i>Lichen Zhang</i>.
+            <br> ICLR, 2024.
+            </pre>
+        </li> -->
 			<li>
 				Training Multi-Layer Over-Parametrized Neural Network in Subquadratic Time (<a href = "https://arxiv.org/abs/2112.07628">arxiv link</a>).
 				<br> Zhao Song, <i>Lichen Zhang</i> and Ruizhe Zhang.
@@ -67,15 +109,10 @@
         </li>
             <li>
                 Dynamic Tensor Product Regression (<a href = "https://arxiv.org/abs/2210.03961">arxiv link</a>).
-                <br> Aravind Reddy, Zhao Song and <i> Lichen Zhang </i>.
+                <br> Aravind Reddy, Zhao Song and <i>Lichen Zhang</i>.
                 <br> NeurIPS, 2022.
                 </pre>
             </li>
-        <!--    <li>
-                Accelerating Frank-Wolfe Algorithm using Low-Dimensional and Adaptive Data Structures (<a href = "https://arxiv.org/pdf/2207.09002.pdf">arxiv link</a>).
-                <br> Zhao Song, Zhaozhuo Xu, Yuanyuan Yang and <i>Lichen Zhang</i>.
-                </pre>
-            </li> -->
 			<li>
                 Fast Sketching of Polynomial Kernels of Polynomial Degree (<a href = "https://arxiv.org/abs/2108.09420">arxiv link</a>).
                 <br> Zhao Song, David P. Woodruff, Zheng Yu and <i>Lichen Zhang</i>.
