--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
             display: flex;
             justify-content: space-between;
         }
-        .bio, .image {
+        .bio { 
+            width: 70%
+        } 
+        .image {
             width: 30%;
         }
         .image img {
-            width: 30%;
+            width: 100%;
             height: auto;
         }
         </style>
