--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
             display: flex;
             justify-content: space-between;
         }
-        .bio { 
-            width: 85%
-        } 
         .image {
             width: 15%;
+            float: right;
         }
         .image img {
             width: 100%;
             height: auto;
         }
+        .bio { 
+            width: 85%;
+        } 
         </style>
 	</head>
 	<body>
