--- a/index.html
+++ b/index.html
@@ -33,10 +33,6 @@
             <img src="lichen.jpg">
         </div>
     </div>
-	<!--	<h2> Short Bio </h2>
-        <p> I'm a second-year PhD student at <a href = "https://math.mit.edu/">  MIT Mathematics</a> and I'm very fortunate to be advised by Professor <a href = "https://math.mit.edu/~kelner/"> Jon Kelner</a>. I obtained my Bachelor and Master in Computer Science at <a href = "https://www.cmu.edu/"> Carnegie Mellon University</a>, advised by Professor <a href = "http://www.cs.cmu.edu/~glmiller/"> Gary Miller</a>.  
-
-        My research interests lie at the intersection of theoretical computer science and machine learning, with a specific focus on developing efficient algorithms. I'm particularly excited about problems in optimization, sketching, and differential privacy. Additionally, I am dedicated to enhancing the efficiency of training processes in large-scale machine learning systems.</p> -->
 		<nav>
 		<h2> Personal Information </h2>
 		<ul>
@@ -57,17 +53,17 @@
                 </pre>
             </li> -->
         <!--    <li>
-            Efficient Alternating Minimization with Applications to Weighted Low Rank Approximation (<a href = "https://arxiv.org/abs/2306.04169">arxiv lin</a>).
-            <br> Zhao Song, Mingquan Ye, Junze Yin and <i> Lichen Zhang</i>.
-            <br> AISTATS, 2024.
-            </pre>
+                Efficient Alternating Minimization with Applications to Weighted Low Rank Approximation (<a href = "https://arxiv.org/abs/2306.04169">arxiv link</a>).
+                <br> Zhao Song, Mingquan Ye, Junze Yin and <i>Lichen Zhang</i>.
+                <br> AISTATS, 2024.
+                </pre>
         </li> -->
-        <!--    <li>
+            <li>
                 Low Rank Matrix Completion via Robust Alternating Minimization in Nearly Linear Time (<a href = "https://arxiv.org/abs/2302.11068">arxiv link</a>).
             <br> Yuzhou Gu, Zhao Song, Junze Yin and <i>Lichen Zhang</i>.
             <br> ICLR, 2024.
             </pre>
-        </li> -->
+            </li> 
 			<li>
 				Training Multi-Layer Over-Parametrized Neural Network in Subquadratic Time (<a href = "https://arxiv.org/abs/2112.07628">arxiv link</a>).
 				<br> Zhao Song, <i>Lichen Zhang</i> and Ruizhe Zhang.
