--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </pre>
         </li> -->
             <li>
-                Low Rank Matrix Completion via Robust Alternating Minimization in Nearly Linear Time (<a href = "https://arxiv.org/abs/2302.11068">arxiv link</a>).
+                Low Rank Matrix Completion via Robust Alternating Minimization in Nearly Linear Time (<a href = "https://arxiv.org/abs/2302.11068">arxiv link</a>, <a href = "https://www.youtube.com/watch?v=H7APrjS9r-0&list=PLJifK6WMakmvx-5hXKYI3eUDHqiJ7FafC&index=6">short talk by Junze</a>).
             <br> Yuzhou Gu, Zhao Song, Junze Yin and <i>Lichen Zhang</i>.
             <br> ICLR, 2024.
             </pre>
